tests/fixtures/positive/di-hygiene/InjectOnAbstractClass.kt
package dihygiene

annotation class Inject

class Dep

abstract class BaseUseCase @Inject constructor(val dep: Dep)
